Update on Overleaf.

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -8,37 +8,39 @@ full-Gramian ENGD in PyTorch~\citep{paszke2019pytorch}.
 As a matrix-free version of ENGD, we use the HessianFree optimizer~\citep{martens2010deep} which uses truncated CG with exact Gramian-vector products to pre-condition the gradient.
 We chose this because there is a fully-featured implementation from~\citet{tatzel2022late} which offers many additional heuristics such as adaptive damping, CG backtracking, and backtracking line search, which allows this algorithm to be operated with very little hyperparameter searching.
 As first order-optimizers, we consider SGD with a tuned learning rate and momentum, as well as Adam with a tuned learning rate. 
-
+%
 %\paragraph{Experimental setup}
 We tune all hyper-parameters including step-sizes, momentum, the exponential-moving-average\todo{tba} parameter using Weights \& Biases~\citep{wandb} via random search, where we will make the runs and choices available after acceptance. 
 All experiments are run on a compute cluster with RTX 6000 GPUs (24\,GiB RAM).
 
 
-\subsection{Pedagogical examples: 2D Poisson and 1D Heat equation}
+\subsection{A pedagogical example: 2D Poisson equation}
 
-We consider the two low-dimensional PDEs used to demonstrate the efficacy of energy natural gradients by~\cite{muller2023achieving}
+We consider a low-dimensional Poisson equation used to demonstrate the efficacy of energy natural gradients by~\cite{muller2023achieving}
 as we can use it as a baseline here for its KFAC approximation. 
-The problems are given by the two-dimensional Poisson equation 
+The %problems are given by the two-dimensional 
+Poisson equation is given by 
 \begin{align}\label{eq:2D-Poisson}
     \begin{split}
         -\Delta u(x,y) & = 2\pi^2 \sin(\pi x) \sin(\pi y) \quad \text{for } (x,y)\in[0,1]^2 \\ 
-    u(x,y) & = 0 \quad \text{for } (x,y) \in\partial[0,1]^2
+    u(x,y) & = 0 \quad \text{for } (x,y) \in\partial[0,1]^2.
     \end{split}
 \end{align}
-as well as the one-dimensional heat equation 
-\begin{align}\label{eq:1D-Heat}
-    \begin{split}
-        \partial_t u(t,x) &= \kappa\partial_x^2u(t,x) \quad \text{for }(t,x)\in[0,1]^2
-        \\
-        u(0,x) &= \sin(\pi x) \qquad\;\, \text{for }x\in[0,1]
-        \\
-        u(t,x) &= 0 \qquad\qquad\quad\text{for }(t,x)\in[0,1]\times\{0,1\}.
-    \end{split}
-\end{align}
-Here, we choose the heat-conductivity $\kappa = \frac14$ in our experiments. 
+%as well as the one-dimensional heat equation 
+%\begin{align}\label{eq:1D-Heat}
+%    \begin{split}
+%        \partial_t u(t,x) &= \kappa\partial_x^2u(t,x) \quad \text{for }(t,x)\in[0,1]^2
+%        \\
+%        u(0,x) &= \sin(\pi x) \qquad\;\, \text{for }x\in[0,1]
+%        \\
+%        u(t,x) &= 0 \qquad\qquad\quad\text{for }(t,x)\in[0,1]\times\{0,1\}.
+%    \end{split}
+%\end{align}
+%Here, we choose the heat-conductivity $\kappa = \frac14$ in our experiments. 
 
 We evaluate the performance of the different optimizers for different network architectures with $4$ hidden layers of different widths and the hyperbolic tangent $\tanh$ as an activation function. 
-As both equations admit closed explicit solutions, we report the relative $L^2$ errors against the wall clock time achieved by the different optimizers in \Cref{fig:2D-Poisson} and \Cref{fig:1D-heat} for the two problems, respectively. 
+Here, we only include the exact second-order methods when the parameter space of the network is small enough for this to be feasible. 
+As the equation admits a closed-form explicit solutions, we report the relative $L^2$ errors against the wall clock time achieved by the different optimizers in \Cref{fig:2D-Poisson}. 
 
 \begin{figure}
     \centering
@@ -47,28 +49,22 @@ As both equations admit closed explicit solutions, we report the relative $L^2$ 
     \label{fig:2D-Poisson}
 \end{figure}
 
+
+\subsection{A higher-dimensional evolutionary problem}
+
+To demonstrate that our method can also be applied to other problems as the Poisson equation we consider the four-dimensional heat equation 
+\begin{align}
+    asdf.
+\end{align}
+Like before, we evaluate the performance of the different optimizers for networks with $4$ hidden layers, $\tanh$ activation function, and layers of different sizes. 
+We report the relative $L^2$ error with respect to the optimization time in \Cref{fig:4D-heat}.  
+ 
 \begin{figure}
     \centering
-    \includegraphics{../kfac_pinns_exp/exp24_heat1d_groupplot/l2_error.pdf}
-    \caption{We report the performance of different optimizers on the heat equation~\eqref{eq:1D-Heat} measured in relative $L^2$ error against wall clock time for architectures with different parameter dimensions $D$; }
-    \label{fig:1D-heat}
+    \includegraphics{kfac_pinns_exp/exp30_heat4d_groupplot/loss_over_time.pdf}
+    \caption{We report the performance of different optimizers on the Poisson equation~\eqref{eq:2D-Poisson} measured in relative $L^2$ error against wall clock time for architectures with different parameter dimensions $D$; ...}
+    \label{fig:4D-heat}
 \end{figure}
-
-
-\subsection{A higher-dimensional problems}
-
-
-\begin{itemize}
-    \item 5D Poisson, formulate in general dimensions 
-    \item 10D heat 
-    \item 4D heat equation 
-\end{itemize}
-
-\begin{align}
-    \begin{split}
-        asdf
-    \end{split}
-\end{align}
 
 %\subsection{A 10D Poisson equation}
 
@@ -78,15 +74,6 @@ As both equations admit closed explicit solutions, we report the relative $L^2$ 
 %    \end{split}
 %\end{align}
 
-\begin{figure}[tb]
-  \centering
-  %\includegraphics{../kfac_pinns_exp/exp24_heat1d_groupplot/l2_error.pdf}
-  %\includegraphics{../kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error.pdf}
-  \includegraphics{../kfac_pinns_exp/exp18_groupplot_poisson5d/l2_error.pdf}
-  \caption{Scaling behaviour of different optimizers for learning the solution of a 5d-Poisson equation w.r.t.
-    neural network size under a given time budget of $3\cdot 10^3\,\text{s}$ on an RTX 6000 GPU.}
-  \label{fig:pedagogical-example}
-\end{figure}
 %\todo[inline]{I think we should only present the time plots to safe space, move everything else to the appendix}
 
 \begin{comment}
@@ -104,7 +91,6 @@ As both equations admit closed explicit solutions, we report the relative $L^2$ 
 \end{itemize}
 
 
-\begin{comment}
     \subsection{Heat equation}
 
 \begin{itemize}
