Update on Overleaf.

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -10,7 +10,8 @@
 \item Only works for sequential networks
 %\item Hessian backpropagation requires memory quadratic in the intermediate features size and therefore becomes impractical for large intermediates like in CNNs.
 \item Our implementation is likely manual and relatively hard to automate with the current graph inspection tools offered by ML frameworks.
-\item 
+\item bigger networks
+\item harder, nonlinear PDEs 
 \end{itemize}
 
 
