--- a/paper/sections/kfacs.tex
+++ b/paper/sections/kfacs.tex
@@ -100,12 +100,12 @@ Recall that we consider the general PDE
 \begin{equation}
     \Psi(u, \partial u, \dots, \partial^{(k)} u) = 0,
 \end{equation}
-where $\Psi\colon \mathbb R^{K}\to\mathbb R^M$ is some smooth function.
+where $\Psi\colon \mathbb R^{K}\to\mathbb R^M, K=\binom{d+k}{d}$ is some smooth function.
 By $r_\vtheta(\vx)\coloneqq \Psi(u(\vx), \partial u(\vx), \dots, \partial^{(k)} u(\vx))$ we denote the residual and consider the PINN loss
 \begin{equation}
     L(\vtheta)\coloneqq \frac1N\sum_{n=1}^N \ell(r_{\vtheta}(\vx_n)),
 \end{equation}
-where $\ell\colon\mathbb R^K\to\mathbb R, K=\binom{d+k}{d}$ is a smooth convex function with definite Hessian $\nabla^2\ell\succ0$ that typically has a unique minimizer at $0$. 
+where $\ell\colon\mathbb R^M\to\mathbb R$ is a smooth convex function with definite Hessian $\nabla^2\ell\succ0$ that typically has a unique minimizer at $0$. 
 We consider the Gauß-Newton matrix
 \begin{align}
     \mG(\vtheta) & \coloneqq \frac1N\sum_{n=1}^N \jac_\vtheta r_\vtheta(\vx_n)^\top \mLambda(r_\vtheta(\vx_n)) \jac_\vtheta r_\vtheta(\vx_n),
@@ -273,11 +273,11 @@ Some works find that if setting this factor to $\mI$, the resulting input-based 
 
 \paragraph{KFAC for linear PDEs}
 
-Consider now the specific case of a general linear PDE 
+For the specific case of a linear PDE 
 \begin{align}
-    \sum_{\lvert \alpha \rvert\le k} c_\alpha \partial^\alpha u = f.
+    \sum_{\lvert \alpha \rvert\le k} c_\alpha \partial^\alpha u = f
 \end{align}
-Then we can derive the approximation 
+the Kronecker-factored approximation takes the form 
 \begin{tcolorbox}[colframe=kfac, title={KFAC for ENGD for a general linear PDE},bottom=0mm,top=0mm,middle=0mm]
 \begin{align*}\label{eq:KFAC-PINNs-general}
     \hat{\mG}%^{\textup{exp}}
